# paddle

./: LICENSE  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package-conda.yml
paddle/datasets/: dataclasses.py
paddle/datasets/en/: wiki.py
paddle/datasets/hu/: nytk_nerkor.py  opinhubank.py  webcorpus.py
paddle/datasets/utils/: dataframe.py  datasets.py
paddle/datasets/utils/parser/: conll.py
paddle/mapping/: orthogonal.py  pinv.py  rcsls.py
paddle/similarity/: cka.py
paddle/utils/: files.py  network.py
paddle/utils/transformers/: trainer.py
