[metadata]
name = paddle
version = 0.1.0
author = Tamás Ficsor
author_email = ficsort@inf.u-szeged.hu
description = Collection of Utility functions for myself to ease the construction of deep learning projects.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ficstamas/paddle
project_urls =
    Bug Tracker = https://github.com/ficstamas/paddle/issues
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.9
install_requires =
    beautifulsoup4>=4.10.0
    numpy>=1.22.3
    pandas>=1.4.1
    requests>=2.27.1
    tqdm>=4.62.3
    urllib3>=1.26.8